--- a/index.html
+++ b/index.html
@@ -482,8 +482,7 @@
                   <li><strong>Name Of The Software</strong>:Visual Studio Code</li>
                   <li><strong>Url</strong>:git@github.com:
                     <br>
-                    Akashks3/my_web
-                    <br>_cv.git
+                    https://akashks3.github.io <br>/myweb/
                   </li>
                   <li><strong>Duration</strong>:1 month </li>
                   <hr>
