--- a/save/download.html
+++ b/save/download.html
@@ -50,8 +50,8 @@
                     <h6> BCA <div class="vr p"></div> Full Stack Developer <div class="vr p"></div> Web Developer</h6>
                 </center>
                 <div class="title p-3 alert alert-info">ABOUT ME</div>
-                <p>I'm self learner and BCA with a strong in computer application programming languages, and technical
-                    skills. Motivated to learn and grow , seeking a challenging opportunity to apply my skills and gain
+                <p>I'm self-learner and BCA with a strong in computer application programming languages, and technical
+                    skills. Motivated to learn and grow, seeking a challenging opportunity to apply my skills and gain
                     practical
                     experience in the field of computer science.</p>
                 <div class="title p-3 alert alert-info">ACADEMIC BACKGROUND</div>
@@ -62,7 +62,7 @@
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Bachelor of Computer Applications - BCA </li>
-                            <li class="list-group-item">From Drbccc.hindu college - Pattabiram</li>
+                            <li class="list-group-item">From DRBCCC Hindu College - Pattabiram</li>
                             <li class="list-group-item">2021-2024</li>
                         </ul>
                     </div>
@@ -72,7 +72,7 @@
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Higher Secondary School - HSC</li>
-                            <li class="list-group-item">From Royal Matric Hr Sec School - Thakkolam</li>
+                            <li class="list-group-item">From Royal Matric Hr.Sec School - Thakkolam</li>
                             <li class="list-group-item">2020-2021</li>
                         </ul>
                     </div>
@@ -85,12 +85,12 @@
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
-                                Front-end :HTML, CSS &
+                                Front-end: HTML,CSS &
                                 JAVASCRIPT - <span class="star">★★★★★</span></li>
-                            <li class="list-group-item">Back-end :PHP &
+                            <li class="list-group-item">Back-end: Python, PHP &
                                 JavaExpress - <span class="star">★★★</span></li>
-                            <li class="list-group-item">Database :MYSQL - <span class="star">★★★★</span< /li>
-                            <li class="list-group-item">Extra :git&github - <span class="star">★★★★★</span< /li>
+                            <li class="list-group-item">Database: MYSQL - <span class="star">★★★★</span< /li>
+                            <li class="list-group-item">Extra: git & github - <span class="star">★★★★★</span< /li>
 
                         </ul>
                     </div>
@@ -134,7 +134,7 @@
                             d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9q-.13 0-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z" />
                         <path
                             d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4 4 0 0 1-.82 1H12a3 3 0 1 0 0-6z" />
-                    </svg> <a href="https://akashks3.github.io/myweb/">https://akashks3.github.io <br>/myweb/</a>
+                    </svg> <a href="https://akashks3.github.io/myweb/">https://akashks3.github.io<br>/myweb/</a>
                     <br>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-linkedin" viewBox="0 0 16 16">
@@ -160,18 +160,18 @@
                 <div class="title p-3 alert alert-info">PROJECTS</div>
                 <ul>
                     <li> Web Curriculum vitae </li>
-                    <li>Vaccination Alert For Infants portal</li>
+                    <li>Vaccination Alert For Infant portal</li>
                 </ul>
                 <div class="title p-3 alert alert-info">CERTIFICATION</div>
                 <ul>
                     <li>Javascript Infosys on 2023</li>
-                    <li>google for education partner cerificated Python on 2023</li>
+                    <li>google for education partner certificate Python on 2023</li>
                 </ul>
                 <div class="title p-3 alert alert-info">SOFTWARE</div>
                 <ul>
                     <li>Visual Studio Code
                     <li>Microsoft 365</li>
-                    <li>Xampp Control Panel</li>
+                    <li>XAMPP Control Panel</li>
                 </ul>
 
             </div>
