--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
 
       <div class="nav-link scrollto active">
         <div class="d-flex justify-content-center">
-          <div class="col-3">
+          <div class="col-4">
             <figure>
               <h2>Hello!,</h2>
               <p>I'm Akash.k<span class="typed" data-typed-items="BCA Student,Full Stack learner">
-                  Full Stack </span><span class="typed-cursor typed-cursor--blink" aria-hidden="true">|</span>
+                  Full Stack Developer 
+                web Developer </span><span class="typed-cursor typed-cursor--blink" aria-hidden="true">|</span>
               </p>
               <div class="btn-group">
                 <a href="#about" class="btn btn-outline-secondary ">Hire me</a>
@@ -102,8 +103,8 @@
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-200 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
             <p class="mb-auto">
-              I'm self learner and BCA with in computer application programming languages and technical
-              skills.Motivated to learn and grow ,seeking a challenging opportunity to apply my skills and gain
+              I'm self-learner and BCA with in computer application programming languages and technical
+              skills.Motivated to learn and grow,seeking a challenging opportunity to apply my skills and gain
               practical experience in the field of computer science.
             </p>
           </div>
@@ -454,8 +455,8 @@
                   <li><strong>Name Of The Software</strong>:Visual Studio Code And Xampp Control Panel </li>
                   <li><strong>Url</strong>:git@github.com:
                     <br>
-                    Akashks3/Vaccination_Alert
-                    <br>.git
+                    <a href=" Akashks3/Vaccination_Alert.git">Akashks3/Vaccination_Alert
+                    <br>.git</a>
                   </li>
                   <li><strong>Duration</strong>:3 month </li>
                   </p>
@@ -482,8 +483,8 @@
                   <li><strong>Name Of The Software</strong>:Visual Studio Code</li>
                   <li><strong>Url</strong>:git@github.com:
                     <br>
-                    https://akashks3.github.io <br>/myweb/
-                  </li>
+                    <a href="https://akashks3.github.io/myweb/">https://akashks3.github<br>.io/myweb/
+                    </a></li>
                   <li><strong>Duration</strong>:1 month </li>
                   <hr>
                 </ul>
