--- a/save/download.html
+++ b/save/download.html
@@ -64,6 +64,8 @@
                             <li class="list-group-item">Bachelor of Computer Applications - BCA </li>
                             <li class="list-group-item">From DRBCCC Hindu College - Pattabiram</li>
                             <li class="list-group-item">2021-2024</li>
+                            <li class="list-group-item">80%</li>
+
                         </ul>
                     </div>
                     <div class="card" style="width: 14rem;">
@@ -74,6 +76,8 @@
                             <li class="list-group-item">Higher Secondary School - HSC</li>
                             <li class="list-group-item">From Royal Matric Hr.Sec School - Thakkolam</li>
                             <li class="list-group-item">2020-2021</li>
+                            <li class="list-group-item">70%</li>
+
                         </ul>
                     </div>
                 </div>
